--- a/topcourses/index.html
+++ b/topcourses/index.html
@@ -46,7 +46,7 @@
         <div class="row narrow article-info">
             <h1>Yale's Most Popular Courses</h1>
             <p class="subtitle">The top courses students are shopping for Spring 2020</p>
-            <p class="byline">Analysis by Maggie Nolan and Daniel Zhao</p>
+            <p class="byline">Analysis by Maggie Nolan &amp; Daniel Zhao</p>
             <p class="byline">Cover photo by Zoe Berg</p>
         </div>
         <div class="row narrow article-text">
