--- a/topcourses/index.html
+++ b/topcourses/index.html
@@ -7,7 +7,7 @@
         <script src="https://d3js.org/d3-time.v1.min.js"></script>
         <script src="https://d3js.org/d3-time-format.v2.min.js"></script>
         <link href="style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700|Work+Sans:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700|Work+Sans:700&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     </head>
     <body>
@@ -39,7 +39,7 @@
                 }
             }
         </script>
-        <a href="http://yaledailynews.com"><img src="ydn_logo.gif" class="ydn-logo"></a>
+        <a href="http://yaledailynews.com" target="_blank"><img src="ydn_logo.gif" class="ydn-logo"></a>
         <div class="row bleed">
             <img src="coursetable_ZoeBerg.jpg" class="header-img">
         </div>
@@ -347,9 +347,9 @@
             <div class="about">
                 <h3>About this project</h3>
                 <p><strong>This is a project of the Yale Daily News Data Desk, a new initiative to bring data-driven journalism to the News. Like what you see? Want to use your data analysis and storytelling skills to report on pressing campus issues? We want to hear from you! Email <a href="mailto:daniel.zhao@yale.edu">Daniel Zhao</a> or <a href="mailto:maggie.nolan@yale.edu">Maggie Nolan</a> to get started.</strong></p>
-                <p>The News scraped <a href="http://https://ivy.yale.edu/course-stats/">Yale's Course Demand Statistics website</a> using a Python script, then analyzed the data in R to extract the most popular courses overall, the courses with the greatest change in shoppers day-to-day, and the most popular seminars. We run these scripts each night to update the data you see.</p>
+                <p>The News scraped <a href="http://https://ivy.yale.edu/course-stats/" target="_blank">Yale's Course Demand Statistics website</a> using a Python script, then analyzed the data in R to extract the most popular courses overall, the courses with the greatest change in shoppers day-to-day, and the most popular seminars. We run these scripts each night to update the data you see.</p>
                 <p>The News inferred classes to be seminars by defining seminars as non-lab courses that met once a week for approximately two hours. Because the Course Demand Statistics website does not contain meeting times, we merged in data from CourseTable, which provides course meeting times.</p>
-                <p>You can find our scripts, code, and cleaned dataset on <a href="">GitHub</a>.</p>
+                <p>You can find our scripts, code, and cleaned dataset on <a href="https://github.com/iamdanzhao/yale-popular-classes/" target="_blank">GitHub</a>.</p>
                 <p>Cover photo by staff photographer Zoe Berg.</p>
             </div>
         </div>
