--- a/work/louisville/index.html
+++ b/work/louisville/index.html
@@ -31,7 +31,7 @@
             </div>
             <nav>
                 <a href="/work/">Work</a>
-                <a href="/photos/">Photos</a>
+                <a href="http://photos.danielzhao.com">Photos</a>
                 <a href="/bio/">Bio</a>
             </nav>
         </header>
