remove links to work (temp)
also change resume link target to _blank

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Daniel Zhao
 
     <div class="home-pills">More about me</div>
 
-    <p class="home-blurb">I'm passionate about tech policy, civic tech, smart cities, and the future of mobility. During my spare time, I take photos, play music, read about trains and planes, and follow politics. Check out <a href="http://photos.danielzhao.com">my photography</a> 📷, see a list of <a href="/work/">things I've worked on</a>📊, or scroll down ⬇️ to learn more about me.</p>
+    <p class="home-blurb">I'm passionate about tech policy, civic tech, smart cities, and the future of mobility. During my spare time, I take photos, play music, read about trains and planes, and follow politics. Check out <a href="http://photos.danielzhao.com">my photography</a> 📷, see a list of <a href="">things I've worked on</a>📊, or scroll down ⬇️ to learn more about me.</p>
 
     <p class="home-blurb">I'd love to talk — get in touch with me at <a href="mailto:daniel@danielzhao.com">daniel@danielzhao.com</a>!</p>
 
@@ -48,7 +48,7 @@ title: Daniel Zhao
     <div class="cols">
         <div class="third">
             <h2>A snapshot of things I've worked on</h2>
-            <p>See a <strong><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok">full resume</a></strong> or a more complete <strong><a href="/work/">list of my work</a></strong></p>
+            <p>See a <strong><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok" target="_blank">full resume</a></strong> or a more complete <strong><a href="">list of my work</a></strong></p>
         </div>
         <div class="two-thirds">
             <ul class="list-arrows">
