add in separator

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Daniel Zhao
 <div class="full">
     <img src="media/DZ_20180612_2116_2419.jpg" class="home-image">
 </div>
-<!--            <div class="wide sep"></div>-->
+<div class="wide sep"></div>
 <div class="wide">
     <div class="cols">
         <div class="third">
