small changes for mobile

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -8,7 +8,7 @@ title: Colophon / Daniel Zhao
     <div class="cols">
         <div class="half">
             <h3>Website</h3>
-            <p class="description">This site is coded by hand with HTML, CSS, JavaScript, and lots of love. It's hosted for free on <strong><a href="https://pages.github.com/" target="_blank">GitHub Pages</a></strong>, which means you can fork the <strong><a href="https://github.com/iamdanzhao/iamdanzhao.github.io">GitHub repo</a></strong> to make your own personal site!</p>
+            <p class="description">This site is coded by hand with HTML, CSS, Jekyll, and lots of love. It's hosted for free on <strong><a href="https://pages.github.com/" target="_blank">GitHub Pages</a></strong>, which means you can fork the <strong><a href="https://github.com/iamdanzhao/iamdanzhao.github.io">GitHub repo</a></strong> to make your own personal site!</p>
             <p class="description">Check out <strong><a href="https://blog.ronakshah.net/The-Complete-Github-Personal-Website-Guide/" target="_blank">Ronak Shah's guide</a></strong> to setting up your own website on GitHub Pages.</p>
         </div>
         <div class="half">
