--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@ title: Daniel Zhao
 <div class="full">
     <img src="media/DZ_20180612_2116_2419.jpg" class="home-image">
 </div>
-<div class="wide sep"></div>
 <div class="wide">
     <div class="cols">
         <div class="third">
@@ -48,7 +47,7 @@ title: Daniel Zhao
     <div class="cols">
         <div class="third">
             <h2>A snapshot of things I've worked on</h2>
-            <p>See a <strong><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok" target="_blank">full resume</a></strong> or a more complete <strong><a href="">list of my work</a></strong></p>
+            <p>See a <strong><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok" target="_blank">full resume</a></strong> or <strong><a href="">more of my work</a></strong></p>
         </div>
         <div class="two-thirds">
             <ul class="list-arrows">
@@ -117,4 +116,5 @@ title: Daniel Zhao
             <li><strong>Little Brother</strong> by Cory Doctorow</li>
         </ul>
     </div>
+    <p><a href="/colophon/"><strong>See what this website is built with →</strong></a></p>
 </div>
