--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ title: Daniel Zhao
     <div class="cols">
         <div class="third">
             <h2>A snapshot of things I've worked on</h2>
-            <p>See a <strong><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok" target="_blank">full resume</a></strong> or <strong><a href="">more of my work</a></strong></p>
+            <p><strong><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok" target="_blank">Full resume</a>,</strong> or <strong><a href="">more work</a></strong></p>
         </div>
         <div class="two-thirds">
             <ul class="list-arrows">
@@ -116,5 +116,6 @@ title: Daniel Zhao
             <li><strong>Little Brother</strong> by Cory Doctorow</li>
         </ul>
     </div>
+    <br>
     <p><a href="/colophon/"><strong>See what this website is built with →</strong></a></p>
 </div>
