testing for code blocks

--- a/writing/index.html
+++ b/writing/index.html
@@ -11,7 +11,7 @@ layout: basic
 
 <div class="posts-entry">
     <a class="posts-entry-title" href="{{ post.url }}">{{ post.title }}</a>
-    <span class="posts-entry-date">{{ post.date | date: "%B %-d %Y" }}</span>
+    <span class="posts-entry-date">{{ post.date | date: "%B %-d, %Y" }}</span>
     <span class="posts-entry-blurb">{{ post.blurb }}</span>
 </div>
 
