--- a/projects/coursedemand/index.html
+++ b/projects/coursedemand/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Assignment 6</title>
+        <title>Course Enrollment Statistics</title>
         <script src="d3v5.js"></script>
         <script src="https://d3js.org/d3-time.v1.min.js"></script>
         <script src="https://d3js.org/d3-time-format.v2.min.js"></script>
