various small fixes

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -18,7 +18,7 @@ title: Colophon / Daniel Zhao
     <div class="half">
         <h3>Photos</h3>
         <p class="description">I've been using my trusty <strong>Canon Rebel T5i</strong> for over six years now. I started with the kit lens, but I now mostly use the <strong>Sigma 18-35mm f/1.8 Art</strong>. On some occasions I'll fall back to the <strong>Canon EF 50mm f/1.8</strong>.</p>
-        <p class="description">I edit my photos with <strong>Adobe Lightroom Classic CC</strong> — I'll switch to the cloud version when it reaches feature parity and once storage gets cheaper.</p>
+        <p class="description">I edit my photos with <strong>Adobe Lightroom Classic CC</strong>. I'll switch to the cloud version when it reaches feature parity and once storage gets cheaper.</p>
     </div>
     <div class="half">
         <h3>Tech</h3>
