--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: Home
     <div class="cols">
         <div class="third">
             <h2>A snapshot of things I've worked on</h2>
-            <p><strong><a href="https://drive.google.com/open?id=1EVYQ_hP3c3kRpX8rFneZTyGeV4ofQXok" target="_blank">Full resume</a></strong> or <strong><a href="/work/">more work</a></strong></p>
+            <p><strong><a href="https://drive.google.com/file/d/10b6y2dfFXqDoMkjpebt-kEdVk11gEUxO/view" target="_blank">Full resume</a></strong> or <strong><a href="/work/">more work</a></strong></p>
         </div>
         <div class="two-thirds">
             <ul class="list-arrows">
