Dec 2020 updates, round 1

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -17,12 +17,12 @@ title: Colophon / Daniel Zhao
     </div>
     <div class="half">
         <h3>Photos</h3>
-        <p class="description">I've been using my trusty <strong>Canon Rebel T5i</strong> for over six years now. I started with the kit lens, but I now mostly use the <strong>Sigma 18-35mm f/1.8 Art</strong>. On some occasions I'll fall back to the <strong>Canon EF 50mm f/1.8</strong>.</p>
+        <p class="description">I recently upgraded to the <strong>Canon EOS RP</strong>, a full-frame mirrorless camera, after using my trusty Canon Rebel T5i for over seven years. I'm shooting with the <strong>RF 24-105mm f/4-7.1</strong>, an <strong>RF 35mm f/1.8 </strong> prime, and on occasion, the <strong>EF 50mm f/1.8</strong>.</p>
         <p class="description">I edit my photos with <strong>Adobe Lightroom Classic CC</strong>. I'll switch to the cloud version when it reaches feature parity and once storage gets cheaper.</p>
     </div>
     <div class="half">
         <h3>Tech</h3>
-        <p class="description">I'm an all-Windows guy: my primary workhorse is the <strong>Dell XPS 15 2-in-1</strong>, and I recently picked up a cheap <strong>Microsoft Surface Go</strong> to work on-the-go.</p>
+        <p class="description">My primary workhorse is the <strong>Dell XPS 15 2-in-1</strong>. I recently picked up a cheap <strong>Lenovo Chromebook Duet</strong> to work on-the-go.</p>
         <p class="description">I organize nearly my entire digital life in <strong><a href="http://notion.so" target="_blank">Notion</a></strong>. I describe it as a mix of Simplenote, Evernote, and Trello, and I'm a huge fan. <strong><a href="https://www.notion.so/?r=6a41f60cf7ad4eebafe33b0fa3960a57" target="_blank">Use my referral link</a></strong> for two free months of Notion Premium!</p>
     </div>
 </div>
