update homepage, new about page

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -1,6 +1,6 @@
 ---
 layout: basic
-title: Colophon / Daniel Zhao
+title: Colophon
 ---
 
 <h1>Colophon</h1>
@@ -17,7 +17,7 @@ title: Colophon / Daniel Zhao
     </div>
     <div class="half">
         <h3>Photos</h3>
-        <p class="description">I recently upgraded to the <strong>Canon EOS RP</strong>, a full-frame mirrorless camera, after using my trusty Canon Rebel T5i for over seven years. I'm shooting with the <strong>RF 24-105mm f/4-7.1</strong>, an <strong>RF 35mm f/1.8 </strong> prime, and on occasion, the <strong>EF 50mm f/1.8</strong>.</p>
+        <p class="description">I recently upgraded to the <strong>Canon EOS R</strong>, a full-frame mirrorless camera, after using my trusty Canon Rebel T5i for over seven years. I'm shooting with the <strong>RF 24-105mm f/4L</strong>, an <strong>RF 35mm f/1.8 </strong> prime, and on occasion, the <strong>EF 50mm f/1.8</strong>.</p>
         <p class="description">I edit my photos with <strong>Adobe Lightroom Classic CC</strong>. I'll switch to the cloud version when it reaches feature parity and once storage gets cheaper.</p>
     </div>
     <div class="half">
