teseting resume format

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ title: About
     <div class="">
         <h1>Hi, I'm <span class="blue">Daniel</span> 👋</h1>
         <h2>I'm passionate about tech policy, politics, civic tech, data visualization, public transit, and the future of cities. I believe that public institutions need to play a key role in addressing many of society's most pressing challenges. And, despite being a statistics major, I believe that numbers seldom capture the entire story.</h2>
-        <h2>One of my ongoing personal goals is to more deeply understand the factors that have influenced my worldview, to construct a narrative of the hundreds of people, events, moments, and experiences that have shaped my beliefs. You'll find a below a short version of that story — at least as it pertains to my professional interests — below.</h2>
+        <h2>One of my ongoing personal goals is to more deeply understand the factors that have influenced my worldview, to construct a narrative of the hundreds of people, events, moments, and experiences that have shaped my beliefs. You'll find below a short version of that story — at least as it pertains to my professional interests — below.</h2>
         <h2>Share anything in common? <a href="mailto:daniel@danielzhao.com"><strong>Let's chat→</strong></a>.</h2>
     </div>
 </div>
