photo preview on homepage

--- a/old/index-home-dev.html
+++ b/old/index-home-dev.html
@@ -45,6 +45,27 @@
                         <p>Open to full-time roles beginning in June 2021.</p>
                     </div>
                 </div>
+                <div class="cols photo-preview">
+                    <h4>Latest photography</h4>
+                    <div class="cols">
+                        <div class="half">
+                            <a href="https://photos.danielzhao.com/new-york-city-web" class="button">
+                                <div class="photo-container">
+                                    <div class="photo-text">New York City</div>
+                                    <img src="/media/DZ_NYC_1995.jpg">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="half">
+                            <a href="https://photos.danielzhao.com/houston" class="button">
+                                <div class="photo-container">
+                                    <div class="photo-text">Houston &amp; Galveston</div>
+                                    <img src="/media/DZ_20200126_1627_3395.jpg">
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="wide sep"></div>
             <div class="wide">
