--- a/index.html
+++ b/index.html
@@ -21,6 +21,38 @@ title: Home
             <p>Open to full-time roles beginning in June 2021.</p>
         </div>
     </div>
+    <div class="cols">
+        <div class="half">
+            <h4>Right now</h4>
+            <p>Finishing my last semester at Yale, completing two senior projects, and working on establishing an on-campus student initiative for tech policy, data governance, and civic tech.</p>
+        </div>
+        <div class="half">
+            <h4>Connect</h4>
+            <p><a href="mailto:daniel@danielzhao.com">Email</a> or <a href="https://twitter.com/iamdanzhao" target="_blank">Twitter</a> are best. I love chatting about tech policy, politics, civic tech, data visualization, public transit, urban planning, and more.</p>
+            <p>Open to full-time roles beginning in June 2021.</p>
+        </div>
+    </div>
+    <div class="cols photo-preview">
+        <h4>Latest photography</h4>
+        <div class="cols">
+            <div class="half">
+                <a href="https://photos.danielzhao.com/new-york-city-web" class="button">
+                    <div class="photo-container">
+                        <div class="photo-text">New York City</div>
+                        <img src="/media/DZ_NYC_1995.jpg">
+                    </div>
+                </a>
+            </div>
+            <div class="half">
+                <a href="https://photos.danielzhao.com/houston" class="button">
+                    <div class="photo-container">
+                        <div class="photo-text">Houston &amp; Galveston</div>
+                        <img src="/media/DZ_20200126_1627_3395.jpg">
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="wide sep"></div>
 <div class="wide">
