--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: About
 ---
+<div id="gradient-top"></div>
+<div id="gradient-bottom"></div>
 <div class="wide intro">
     <div class="">
         <h1>Hi, I'm <span class="blue">Daniel</span> 👋</h1>
@@ -26,7 +28,7 @@ title: About
     <div class="cols">
         <div class="quarter">
             <h4>News</h4>
-            <ul class="no-mark">
+            <ul>
                 <li>New York Times</li>
                 <li>Protocol</li>
                 <li>FiveThirtyEight</li>
@@ -36,7 +38,7 @@ title: About
         </div>
         <div class="quarter">
             <h4>Movies & TV</h4>
-            <ul class="no-mark">
+            <ul>
                 <li>Inception</li>
                 <li>Boyhood</li>
                 <li>Ex Machina</li>
@@ -46,7 +48,7 @@ title: About
         </div>
         <div class="quarter">
             <h4>Apps</h4>
-            <ul class="no-mark">
+            <ul>
                 <li>Notion</li>
                 <li>iA Writer</li>
                 <li>Transit</li>
@@ -56,7 +58,7 @@ title: About
         </div>
         <div class="quarter">
             <h4>Food</h4>
-            <ul class="no-mark">
+            <ul>
                 <li>Sparkling water</li>
                 <li>Starbucks</li>
                 <li>Pineapple on pizza</li>
@@ -67,7 +69,7 @@ title: About
     </div>
     <div>
         <h4>Books</h4>
-        <ul class="no-mark">
+        <ul>
             <li><strong>Strange Stones: Dispatches from East and West </strong>by Peter Hessler</li>
             <li><strong>Brave New World</strong> by Aldous Huxley and <strong>1984</strong> by George Orwell</li>
             <li><strong>Hillbilly Elegy: A Memoir of a Family and Culture in Crisis</strong> by J. D. Vance</li>
@@ -75,6 +77,30 @@ title: About
             <li><strong>The Fifth Risk</strong> by Michael Lewis</li>
         </ul>
     </div>
-    <br>
-    <p><a href="/colophon/"><strong>See what this website is built with →</strong></a></p>
+</div>
+<div class="wide sep"></div>
+<div class="wide">
+    <h2>Colophon</h2>
+    <div class="cols">
+        <div class="half">
+            <h3>Website</h3>
+            <p>This site is coded by hand with HTML, CSS, Jekyll, and lots of love. It's hosted for free on <strong><a href="https://pages.github.com/" target="_blank">GitHub Pages</a></strong>, which means you can fork the <strong><a href="https://github.com/iamdanzhao/iamdanzhao.github.io">GitHub repo</a></strong> to make your own personal site!</p>
+            <p>Check out <strong><a href="https://blog.ronakshah.net/The-Complete-Github-Personal-Website-Guide/" target="_blank">Ronak Shah's guide</a></strong> to setting up your own website on GitHub Pages.</p>
+        </div>
+        <div class="half">
+            <h3>Design</h3>
+            <p>I fell in love with the <strong><a href="https://www.ibm.com/plex/" target="_blank">IBM Plex</a></strong> font family ever since I first came across it. I now use Plex Sans across my website and resume, and Plex Serif and Plex Mono variants where appropriate. On my website, the fonts are served via <strong><a href="https://fonts.google.com/specimen/IBM+Plex+Sans" target="_blank">Google Web Fonts</a></strong>.</p>
+            <p>Primary accent colors are <span class="blue-block">#0083ff</span> and <span class="pink-block">#ff5470</span>.</p>
+        </div>
+        <div class="half">
+            <h3>Photos</h3>
+            <p>I recently upgraded to the <strong>Canon EOS R</strong>, a full-frame mirrorless camera, after using my trusty Canon Rebel T5i for over seven years. I'm shooting with the <strong>RF 24-105mm f/4L</strong>, an <strong>RF 35mm f/1.8 </strong> prime, and on occasion, the <strong>EF 50mm f/1.8</strong>.</p>
+            <p>I edit my photos with <strong>Adobe Lightroom Classic CC</strong>. I'll switch to the cloud version when it reaches feature parity and once storage gets cheaper.</p>
+        </div>
+        <div class="half">
+            <h3>Tech</h3>
+            <p>My primary workhorse is the <strong>Dell XPS 15 2-in-1</strong>. I recently picked up a cheap <strong>Lenovo Chromebook Duet</strong> to work on-the-go.</p>
+            <p>I organize nearly my entire digital life in <strong><a href="http://notion.so" target="_blank">Notion</a></strong>. I describe it as a mix of Simplenote, Evernote, and Trello, and I'm a huge fan. <strong><a href="https://www.notion.so/?r=6a41f60cf7ad4eebafe33b0fa3960a57" target="_blank">Use my referral link</a></strong> for two free months of Notion Premium!</p>
+        </div>
+    </div>
 </div>
