--- a/old/index-work-dev.html
+++ b/old/index-work-dev.html
@@ -13,7 +13,8 @@
         <title>Work / Daniel Zhao</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link href="/styles/main.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,300,400,400i,500,600&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans+Condensed:ital,wght@0,400;0,600;1,400&family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -34,15 +35,11 @@
             </nav>
         </header>
         <main>
-<!--
-            <div id="gradient-top"></div>
-            <div id="gradient-bottom"></div>
--->
             <div class="wide">
                 <h1 id="work">Work</h1>
 
 <ul class="list-bar list-bold" id="sticky-nav-bar">
-    <li>Jump to</li>
+  <li>Jump to</li>
   <li><a href="#experience">Work experience</a></li>
   <li><a href="#leadership">Leadership</a></li>
   <li><a href="#projects">Projects</a></li>
@@ -211,6 +208,9 @@
   <li>Current as of December 2018, but Delta has since designated Boston (BOS) as a hub, and established focus city operations Austin (AUS), Nashville (BNA), and San Jose (SJC). Of course, all of this is up in the air because nobody knows what will happen post-coronavirus.</li>
 </ul>
 
+<script src="/styles/sticky.js" type="text/javascript"></script>
+
+
             </div>
         </main>
         <footer>
@@ -223,19 +223,5 @@
             </div>
             <p><strong>© 2021 Daniel Zhao</strong></p>
         </footer>
-        <script type="text/javascript">
-            window.onscroll = function() { stickContent() };
-            
-            var navbar = document.getElementById("sticky-nav-bar");
-            var sticky = navbar.offsetTop;
-
-            function stickContent() {
-                if (window.pageYOffset >= sticky) {
-                    navbar.classList.add("stuck")
-                } else {
-                    navbar.classList.remove("stuck");
-                }
-            }
-        </script>
     </body>
 </html>
