--- a/about/index.html
+++ b/about/index.html
@@ -89,12 +89,12 @@ title: About
         </div>
         <div class="half">
             <h3>Design</h3>
-            <p>I fell in love with the <strong><a href="https://www.ibm.com/plex/" target="_blank">IBM Plex</a></strong> font family ever since I first came across it. I now use Plex Sans across my website and resume, and Plex Serif and Plex Mono variants where appropriate. On my website, the fonts are served via <strong><a href="https://fonts.google.com/specimen/IBM+Plex+Sans" target="_blank">Google Web Fonts</a></strong>.</p>
+            <p>I fell in love with the <strong><a href="https://www.ibm.com/plex/" target="_blank">IBM Plex</a></strong> family ever since I first came across it. I now use Plex Sans across my website and resume, and Plex Serif and Plex Mono variants where appropriate. On my website, the fonts are served via <strong><a href="https://fonts.google.com/specimen/IBM+Plex+Sans" target="_blank">Google Web Fonts</a></strong>.</p>
             <p>Primary accent colors are <span class="blue-block">#0083ff</span> and <span class="pink-block">#ff5470</span>.</p>
         </div>
         <div class="half">
             <h3>Photos</h3>
-            <p>I recently upgraded to the <strong>Canon EOS R</strong>, a full-frame mirrorless camera, after using my trusty Canon Rebel T5i for over seven years. I'm shooting with the <strong>RF 24-105mm f/4L</strong>, an <strong>RF 35mm f/1.8 </strong> prime, and on occasion, the <strong>EF 50mm f/1.8</strong>.</p>
+            <p>I recently upgraded to the <strong>Canon EOS R</strong>, a full-frame mirrorless camera, after using my trusty Canon Rebel T5i for over seven years. I shoot with the <strong>RF 24-105mm f/4L</strong>, an <strong>RF 35mm f/1.8 </strong> prime, and on occasion, the <strong>EF 50mm f/1.8</strong>.</p>
             <p>I edit my photos with <strong>Adobe Lightroom Classic CC</strong>. I'll switch to the cloud version when it reaches feature parity and once storage gets cheaper.</p>
         </div>
         <div class="half">
