bucket list items

--- a/about/index.html
+++ b/about/index.html
@@ -80,6 +80,12 @@ title: About
 </div>
 <div class="wide sep"></div>
 <div class="wide">
+    <h2>A few bucket list items</h2>
+    <p><strong>Become a middle or high school teacher.</strong> The teachers I had as a child growing up are unequivocally the people who have impacted my trajectory the most. In high school, my AP Calculus teacher helped me develop confidence in my mathematical abilities; my AP Statistics teacher made me really love the subject that would become my major in undergrad; and my U.S. history teachers helped develop a love for politics and an appreciation for the historical-political institutions that shape our society. Before that, my middle school French teacher helped foster a love not just for the language, but the rich history and culture of France. And my choir teachers throughout elementary, middle, and high school gave me the opportunity to do something I've come to truly love, while teaching me melodies that will always remain in my head. I believe in the power of education to change lives, not just by opening academic and professional doors, but by shaping someone's character and imprinting a deep appreciation for the world around us, and I want to help make that happen for a future generation of young adults.</p>
+    <p><strong>Learn to sing again.</strong> I did choir all throughout elementary, middle, and high school. I apparently wasn't good enough for the a cappella groups in college, but I still can think of no other activity where, as I'm doing it, I feel completely seized by the moment, immersed in a different world, truly enjoying the moment. There is nothing more satisfying than hearing a chord just "click", or waiting for a suspended fourth resolve to the third, or building up to a key change that leads into the climax of a piece. I don't think I actually have much talent (I once tried singing and someone thought the sound was a "dying whale"), it's hard for me to find the time, and it's even harder to find an audience that might listen. But I do long for the day when I have the time and space to improve and hopefully sing again.</p>
+</div>
+<div class="wide sep"></div>
+<div class="wide">
     <h2>Colophon</h2>
     <div class="cols">
         <div class="half">
