--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="photo-preview">
                     <div class="intro-header">
                         <h4>Photography</h4>
-                        <a href="https://photos.google.com">All photos→</a>
+                        <a href="https://photos.danielzhao.com">All photos→</a>
                     </div>
                     <div class="cols">
                         <div class="half">
@@ -109,7 +109,7 @@
                 <a href="https://linkedin.com/in/iamdanzhao" class="fa fa-linkedin" target="_blank"></a>
                 <a href="https://github.com/iamdanzhao" class="fa fa-github" target="_blank"></a>
             </div>
-            <p><strong>© 2021 Daniel Zhao</strong></p>
+            <p><strong>© 2022 Daniel Zhao</strong></p>
         </footer>
     </body>
 </html>
